--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-.java linguist-detectable = true
-.js linguist-detectable = false
-.html linguist-detectable = false
+*.java linguist-detectable = true
+*.js linguist-detectable = false
+*.html linguist-detectable = false
 
